Fixes adapter modal button-group and button sizes on smaller screens

--- a/cdap-ui/app/features/adapters/etlapps.less
+++ b/cdap-ui/app/features/adapters/etlapps.less
@@ -213,7 +213,7 @@ body.theme-cdap.state-adapters-create {
             }
 
             .transition(all 0.2s ease);
-            @media (max-width: @screen-sm-max) {
+            @media (max-width: @screen-xs-min) {
               width: 20%;
             }
             &:last-child {
@@ -227,6 +227,9 @@ body.theme-cdap.state-adapters-create {
             }
             &:only-child {
               margin-right: -1px;
+              @media (max-width: @screen-xs-max) {
+                width: 100%;
+              }
             }
             &:hover, &:focus {
               background-color: @cdap-header;
@@ -238,6 +241,11 @@ body.theme-cdap.state-adapters-create {
           &.btn-group {
             display: block;
             > div {
+
+              @media (max-width: @screen-xs-max) {
+                width: 20%;
+              }
+
               display: inline-block;
               margin-right: -4px;
               &:last-child {
